#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([libapetag], [2.1.6], [easytag])
AC_CONFIG_AUX_DIR(.)
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

# Various options for configure
AC_ARG_ENABLE(id3v23,
              AC_HELP_STRING([--disable-id3v23], [Disable support for writing id3v2.3 tags (default=enabled)]),
              , enable_id3v23=yes)

# Cross compiling support
AC_CANONICAL_BUILD
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Setup for libtool
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

# Checks for libraries.
AC_CHECK_LIB([c], [main])
AC_CHECK_LIB([m], [main])

# Checks for header files.
AC_CHECK_HEADERS([string.h stdio.h stdlib.h stddef.h stdarg.h string.h])
AC_CHECK_HEADERS([limits.h assert.h math.h])

# Check whether to use libid3
if test "x$enable_id3v23" = "xyes"; then
  AC_CHECK_LIB([id3], [main])
  AC_CHECK_HEADERS([id3.h])
fi
AM_CONDITIONAL(COMPILE_WITH_ID3, test "x$enable_id3v23" = "xyes")

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memcpy])

# Libapetag soname
APETAG_VERSION=0:0:0
AC_SUBST(APETAG_VERSION)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
